installed react icons, fixed overflow issue

--- a/src/components/styles/style.scss
+++ b/src/components/styles/style.scss
@@ -75,6 +75,7 @@ u{
     flex-direction: column;
     justify-content: end;
     padding-left: 2vw;
+    //z-index: -1;
     
     @include xs{
         width: 95vw;
@@ -185,27 +186,6 @@ u{
     font-size: 1.2rem;
 }
 
-.box-button{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding-right: 0.5rem;
-}
-.box{
-    min-width: 5em;
-    min-height: 2.5em;
-
-    &.colored{
-        border: solid thin orange;
-        margin-bottom: -2.75em;
-    }
-    &.white{
-        background-color: black;
-        border: solid thin white;
-        z-index: 2;
-        margin-left: 0.5em;
-    }
-}
 
 .cta-container{
     display: flex;
@@ -301,7 +281,8 @@ u{
     align-items: center;
     //overflow-y: scroll;
     scrollbar-width: 0;
-    overflow: hidden;
+    //overflow: hidden;
+    z-index: 1;
 
     //border: thin solid yellow;
     @include xs{
@@ -346,7 +327,7 @@ u{
     background-image: url(../../images/cork-text.png);
     background-repeat: repeat;
     height: 90vh;
-    z-index: 3;
+    z-index: 4;
     @include xs{
         margin-bottom: -70vh;
     }
@@ -365,7 +346,7 @@ u{
     background-image: url(../../images/cork-text.png);
     background-repeat: repeat;
     height: 90vh;
-    z-index: 2;
+    z-index: 3;
     @include xs{
         margin-bottom: -60vh;
     }
@@ -381,7 +362,7 @@ u{
     background-image: url(../../images/cork-text.png);
     background-repeat: repeat;
     height: 90vh;
-    z-index: 1;
+    z-index: 2;
     @include xs{
         margin-bottom: -35vh;
     }
@@ -462,3 +443,14 @@ u{
   .cv-button:active{
     background: #4e4e4e67;
   }
+
+.icon-tray{
+    display: flex;
+    justify-content: end;
+    padding-right: 10px;
+}
+
+.icon-tray > * {
+    font-size: 3em;
+    padding-left: 5px;
+}
